Up until lab 12, just need to fix resume

--- a/views/skill/skillViewById.ejs
+++ b/views/skill/skillViewById.ejs
@@ -1,14 +1,14 @@
 <html>
 <head>
-    <title>skills - <%= result[0].skill_name %></title>
+    <title>Skills - <%= result[0].skill_name %></title>
 </head>
 <body>
-    <h1>skills</h1>
-    <ul>
-        <li>skill ID: <%= result[0].skill_id%></li>
-        <li>skill Name: <%= result[0].skill_name %></li>
-        <li>Address ID: <%= result[0].address_id %></li>
-    </ul>
+<h1>Skills</h1>
+<ul>
+    <li>Skill ID: <%= result[0].skill_id%></li>
+    <li>Skill Name: <%= result[0].name %></li>
+    <li>Description: <%= result[0].description %></li>
+</ul>
 </body>
 
 </html>
