--- a/views/address/addressViewById.ejs
+++ b/views/address/addressViewById.ejs
@@ -1,14 +1,14 @@
 <html>
 <head>
-    <title>addresss - <%= result[0].address_name %></title>
+    <title>Addresses - <%= result[0].street %></title>
 </head>
 <body>
-    <h1>addresss</h1>
-    <ul>
-        <li>address ID: <%= result[0].address_id%></li>
-        <li>address Name: <%= result[0].address_name %></li>
-        <li>Address ID: <%= result[0].address_id %></li>
-    </ul>
+<h1>Addresses</h1>
+<ul>
+    <li>Address ID: <%= result[0].address_id%></li>
+    <li>Street: <%= result[0].street %></li>
+    <li>Zip Code: <%= result[0].zip_code %></li>
+</ul>
 </body>
 
 </html>
