--- a/views/company/companyViewById.ejs
+++ b/views/company/companyViewById.ejs
@@ -1,14 +1,13 @@
 <html>
 <head>
-    <title>companys - <%= result[0].company_name %></title>
+    <title>Companies - <%= result[0].company_name %></title>
 </head>
 <body>
-    <h1>companys</h1>
-    <ul>
-        <li>company ID: <%= result[0].company_id%></li>
-        <li>company Name: <%= result[0].company_name %></li>
-        <li>Address ID: <%= result[0].address_id %></li>
-    </ul>
+<h1>Companies</h1>
+<ul>
+    <li>Company ID: <%= result[0].company_id%></li>
+    <li>Company Name: <%= result[0].company_name %></li>
+</ul>
 </body>
 
 </html>
