--- a/views/resume/resumeViewAll.ejs
+++ b/views/resume/resumeViewAll.ejs
@@ -1,19 +1,27 @@
 <html>
-    <head>
-        <title>resumes</title>
-    </head>
-    <body>
-        <h1>resumes</h1>
-        <table border="1">
-            <tr><th>resume ID</th><th>Name</th><th>address_id</th></tr>
-            <% for(var i=0; result.length > i; i++ ) { %>
-            <tr>
-                <td><%= result[i].resume_id%></td>
-                <td><a href="/resume/?resume_id=<%= result[i].resume_id %>"><%= result[i].resume_name %></a></td>
-                <td><%= result[i].address_id %></td>
-            </tr>
-            <% } %>
-        </table>
-    </body>
+<head>
+    <title>Resumes</title>
+</head>
+<body>
+<h1>Resumes</h1>
+<a href="/resume/add">Add New Resume</a> <br />
+
+<br />
+
+<table border="1">
+    <tr><th>Name</th><th>Account ID</th><th>Action</th></tr>
+    <% for(var i=0; result.length > i; i++ ) { %>
+    <tr>
+        <td><a href="/resume/?resume_id=<%= result[i].resume_id %>"><%= result[i].resume_name %></a></td>
+        <td><%= result[i].account_id %></td>
+        <td><form action="/resume/delete/">
+                <input type="hidden" name="resume_id" id="resume_id" value="<%= result[i].resume_id %>" />
+                <input type="submit" value="Delete"/>
+            </form>
+        </td>
+    </tr>
+    <% } %>
+</table>
+</body>
 
 </html>
