--- a/views/resume/resumeViewById.ejs
+++ b/views/resume/resumeViewById.ejs
@@ -1,14 +1,14 @@
 <html>
 <head>
-    <title>resumes - <%= result[0].resume_name %></title>
+    <title>Resumes - <%= result[0].resume_name %></title>
 </head>
 <body>
-    <h1>resumes</h1>
-    <ul>
-        <li>resume ID: <%= result[0].resume_id%></li>
-        <li>resume Name: <%= result[0].resume_name %></li>
-        <li>Address ID: <%= result[0].address_id %></li>
-    </ul>
+<h1>Resumes</h1>
+<ul>
+    <li>Resume ID: <%= result[0].resume_id%></li>
+    <li>Resume Name: <%= result[0].resume_name %></li>
+    <li>Account ID: <%= result[0].account_id %></li>
+</ul>
 </body>
 
 </html>
