--- a/views/skill/skillViewAll.ejs
+++ b/views/skill/skillViewAll.ejs
@@ -1,19 +1,27 @@
 <html>
-    <head>
-        <title>skills</title>
-    </head>
-    <body>
-        <h1>skills</h1>
-        <table border="1">
-            <tr><th>skill ID</th><th>Name</th><th>address_id</th></tr>
-            <% for(var i=0; result.length > i; i++ ) { %>
-            <tr>
-                <td><%= result[i].skill_id%></td>
-                <td><a href="/skill/?skill_id=<%= result[i].skill_id %>"><%= result[i].skill_name %></a></td>
-                <td><%= result[i].address_id %></td>
-            </tr>
-            <% } %>
-        </table>
-    </body>
+<head>
+    <title>Skills</title>
+</head>
+<body>
+<h1>Skills</h1>
+<a href="/skill/add">Add New Skill</a> <br />
+
+<br />
+
+<table border="1">
+    <tr><th>Name</th><th>Description</th><th>Action</th></tr>
+    <% for(var i=0; result.length > i; i++ ) { %>
+    <tr>
+        <td><a href="/skill/?skill_id=<%= result[i].skill_id %>"><%= result[i].name %></a></td>
+        <td><%= result[i].description %></td>
+        <td><form action="/skill/delete/">
+                <input type="hidden" name="skill_id" id="skill_id" value="<%= result[i].skill_id %>" />
+                <input type="submit" value="Delete"/>
+            </form>
+        </td>
+    </tr>
+    <% } %>
+</table>
+</body>
 
 </html>
